docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
/* ... */
.layout-navigation__link.active {
    background: white;
    border-top: 1px solid rgba(0,0,0,0.1);
}
ul.layout-navigation.layout-navigation--full-width.layout--large-screen-only.dropdown-menu.layout-navigation__dropdown-menu {
    top: 0px!important;
}
.layout-navigation__dropdown-menu .layout-navigation__link {
    border-bottom: 1px solid rgba(0,0,0,0.1);
}
.logo-wrapper-mobile {
    display: flex!important;
    width: 100%!important;
    justify-content: center;
    margin-left: -63px;
}
.logo-wrapper-mobile img {
    width: 190px;
}
.layout__header-mobile .active a {
    background: none!important;
}
.layout__header-mobile .active ul {
    background: none!important;
}
.layout__header-mobile .active ul .layout-navigation__link {
    border-left: none!important;
    border-top: 1px solid rgba(255,255,255,0.1);
    border-bottom: 1px solid rgba(255,255,255,0.1)!important;
}
.btn-radio-select .control-label {
    font-weight: bold!important;
}
.course-periods-accordion .field--name-description p {
    font-weight: bold!important;
}
.page-node-type-news article .field--name-field-image {
    display: none;
}

.file--mime-application-pdf {
    background: none!important;
    border: 1px solid #00a5e2!important;
    margin-bottom: 25px;
}
.path-taxonomy article .col-sm-6 {
    width: 100%!important;
}
.path-taxonomy .feed-icons {
    display: none;
}
.path-taxonomy .lc-btn-box {display: none;}
.path-taxonomy .lc-contact-box { display: none; }
.path-taxonomy .lc-price-box { display: none; }
@media only screen and (max-width: 1130px) {
    .vih_class_table_teaser .field--name-field-vih-class-image img {
        min-width: 150%!important;
    }
    .field--name-field-vih-class-image { overflow: hidden!important; }
}
@media only screen and (max-width: 870px) { 
    .modal-course-content-teaser-wrapper {
        display: flex;
        flex-direction: column;
    }
    .modal-course-content-teaser-wrapper .col-xs-6 {
        width: 100%;
    }
    .modal-course-content-teaser-wrapper .field--type-string {
    margin: 20px;
    padding-bottom: 10px;    
    }
    .panel-title a {
        text-align: left;
    }
    .modal-content p {
        text-align: left;
    }
    .modal-body {
        padding: 40px!important;
        padding-right: 40px!important;
    }
    .page-node-type-vih-long-cource article .table-bordered tr {
        display: flex;
        flex-direction: column;
    }
    .field--name-field-vih-user-photo img {
        min-width: 100%;
    }
    .breadcrumb li, .breadcrumb li a {
        width: 100%;
        font-size: 12px!important;
        display: flex;
        justify-content: center;
        align-items: center;
        font-weight: bold;
    }
    .breadcrumb li + li:before {
        height: 100%!important;
    margin-top: -28px!important;
            border-width: 30px!important;
    }
    .breadcrumb {
        display: flex!important;
        flex-direction: row;
        max-width: 450px;
    }
    .breadcrumb li:first-child a:before {
        padding-right: 10px;
    }
    header .layout__header-row {
            width: 100%!important;
    display: flex!important;
    flex-direction: row!important;
    }
}
//  ***********************************

